--- a/css/media.css
+++ b/css/media.css
@@ -576,6 +576,7 @@
     .filter-main__item:nth-child(3) {
         flex: none;
         width: 100%;
+        margin-top: 8px;
         justify-content: flex-start;
         margin-right: 0;
     }
