--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body textarea:required:valid {
 }
 body {
 	font-family: "Montserrat";
-	font-size: 16px;
+	font-size: 16px; 
 	line-height: 150%;
 	color: #191E27;
 	overflow-x: hidden;
@@ -1289,4 +1289,447 @@ form {
 }
 .menu-overlay {
 	display: none;
+}
+
+.page-sale {
+	padding-top: 30px;
+	padding-bottom: 78px;
+}
+.title-main {
+	font-size: 40px;
+	line-height: 165%;
+	font-weight: 700;
+	color: #1C3A78;
+}
+.page-links {
+	margin-top: -50px;
+	margin-bottom: 48px;
+	gap: 16px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.page-links a {
+	height: 48px;
+	padding: 0 18px;
+	color: #1C56B6;
+	font-size: 13px;
+	font-weight: 600;
+	border: 1px solid #1C56B6;
+	border-radius: 6px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	position: relative;
+	z-index: 2;
+}
+.page-links a:hover,
+.page-links .active a {
+	background: #1C56B6;
+	color: #fff;
+}
+.item-sale {
+	border-radius: 16px;
+	line-height: 175%;
+	min-height: 100%;
+	background: #F2FAFF;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	transition: all 0.5s;
+}
+.item-news:hover,
+.item-sale:hover {
+	box-shadow: 0 5px 15px #d2e7f5;
+}
+.item-sale__image {
+	height: 344px;
+	border-radius: 16px 16px 0 0;
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+}
+.item-sale__image img {
+	width: 100%;
+    height: 100%;
+    object-fit: cover;
+    font-family: 'object-fit: cover;';
+	border-radius: 16px 16px 0 0;
+}
+.item-sale__image::after {
+	position: absolute;
+	display: block;
+	content: " ";
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border-radius: 16px 16px 0 0;
+	background-image: url(../img/line_sale1.svg);
+	background-repeat: no-repeat;
+	background-position: right bottom;
+	background-size: 456px auto;
+}
+.row_main > div:nth-child(3) .item-sale__image::after,
+.row_main > div:nth-child(2) .item-sale__image::after {
+	background-image: url(../img/line_sale2.svg);
+	background-repeat: no-repeat;
+	background-position: left  20px;
+	background-size: 710px auto;
+}
+.item-sale__content {
+	padding: 20px 38px;
+	padding-bottom: 24px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 100%;
+	flex: 1;
+}
+.item-sale__date {
+	margin-bottom: 6px;
+	font-weight: 500;
+	color: #1C3A78;
+	display: block;
+	width: 100%;
+}
+.item-sale__title {
+	font-size: 22px;
+	margin-bottom: 29px;
+	line-height: 145%;
+	font-weight: 600;
+	color: #191E27;
+}
+.item-sale p {
+	margin-bottom: 16px;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;  
+	overflow: hidden;
+}
+.item-news .btn-main,
+.item-sale .btn-main {
+	height: 44px;
+	padding: 0 16px;
+	font-size: 14px;
+	margin-top: auto;
+}
+.pager {
+	height: 46px;
+	margin-top: 70px;
+	max-width: 100%;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.page-numbers {
+	margin: 0 15px;
+	color: #191E27;
+	font-weight: 400;
+}
+.page-numbers:hover,
+.page-numbers.current {
+	color: #1C56B6;
+}
+.page-numbers.current {
+	font-weight: 600;
+}
+.prev.page-numbers,
+.next.page-numbers {
+	width: 50px;
+	height: 46px;
+	font-size: 14px;
+	border-radius: 6px 0 0 6px;
+	color: #1C56B6;
+	background: #E3E6E8;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	margin: 0;
+	top: 0;
+	left: 0;
+}
+.next.page-numbers {
+	right: 0;
+	left: auto;
+	border-radius: 0 6px 6px 0;
+}
+.prev.page-numbers:hover,
+.next.page-numbers:hover {
+	color: #fff;
+	background: #1C56B6;
+}
+.page-news {
+	padding-top: 36px;
+	padding-bottom: 74px;
+}
+.page-news .title-main {
+	margin-bottom: 40px;
+}
+.item-news {
+	padding: 24px 26px;
+	border-radius: 16px;
+	background: #F2FAFF;
+	font-weight: 500;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	min-height: 100%;
+	transition: all 0.5s;
+}
+.item-news__image {
+	height: 268px;
+	margin-bottom: 10px;
+	border-radius: 16px;
+	width: 100%;
+	display: block;
+}
+.item-news__image img {
+	width: 100%;
+    height: 100%;
+    object-fit: cover;
+    font-family: 'object-fit: cover;';
+	border-radius: 16px;
+}
+.item-news__date {
+	margin-bottom: 6px;
+	line-height: 175%;
+	width: 100%;
+	color: #1C3A78;
+}
+.item-news__title {
+	font-size: 22px;
+	max-width: 370px;
+	line-height: 145%;
+	margin-bottom: 20px;
+	font-weight: 600;
+	color: #191E27;
+	display: block;
+	width: 100%;
+}
+.item-news p {
+	margin-bottom: 16px;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;  
+	overflow: hidden;
+}
+.wrapper_page .header {
+	box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+}
+.page-about {
+	padding-top: 62px;
+	padding-bottom: 80px;
+}
+.billbord-about {
+	height: 700px;
+	padding: 28px 80px;
+	padding-bottom: 149px;
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-end;
+	background-image: url(../img/billbord_about.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	position: relative;
+	border-radius: 24px;
+	z-index: 1;
+}
+.billbord-about::after {
+	position: absolute;
+	display: block;
+	content: " ";
+	width: 1563px;
+	height: 574px;
+	bottom: 43px;
+	left: 48px;
+	background-image: url(../img/billbord_lines.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+	z-index: -1;
+}
+.title-billbord {
+	font-size: 80px;
+	max-width: 543px;
+	line-height: 123%;
+	font-weight: 700;
+}
+.title-about.title-about_top {
+	font-weight: 500;
+}
+.page-about + .about .about__image {
+	margin-top: 0;
+}
+.about__info {
+	padding: 56px 87px;
+	margin-top: 94px;
+	font-size: 18px;
+	line-height: 167%;
+	font-weight: 500;
+	border-radius: 16px;
+	background-color: #F2FAFF;
+}
+.about__info p {
+	max-width: 100% !important;
+}
+.about__info .title-about {
+	margin-bottom: 17px;
+	margin-top: 0 !important;
+}
+.about .title-about.title-about_top {
+	padding: 20px 0;
+	margin-top: 0;
+}
+.page-vacancies {
+	padding-top: 62px;
+	padding-bottom: 106px;
+}
+.billbord-about.billbord-about_vacancies {
+	margin-bottom: 90px;
+	justify-content: flex-start;
+	background-image: url(../img/billbord_vacancies.jpg);
+}
+.billbord-about.billbord-about_vacancies::before {
+	position: absolute;
+	display: block;
+	content: " ";
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border-radius: 24px;
+	background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+	z-index: -1;
+}
+.billbord-about.billbord-about_vacancies::after {
+	width: 1394px;
+	height: 611px;
+	top: 72px;
+	left: 0;
+	background-image: url(../img/billbord_lines2.svg);
+}
+.item-vacancy {
+	margin-bottom: 20px;
+	border: 1px solid #1C56B6;
+	border-radius: 16px;
+	transition: all 0.3s;
+}
+.item-vacancy__head {
+	font-size: 28px;
+	padding: 26px 57px;
+	padding-right: 33px;
+	line-height: 136%;
+	font-weight: 600;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	cursor: pointer;
+}
+.item-vacancy__head::after {
+	position: relative;
+	display: block;
+	content: " ";
+	width: 24px;
+	height: 24px;
+	background-image: url(../img/plus.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+.item-vacancy__content {
+	padding: 0 87px;
+	padding-bottom: 38px;
+	font-size: 18px;
+	line-height: 167%;
+	font-weight: 500;
+	display: none;
+}
+.item-vacancy__content strong {
+	font-weight: 600;
+}
+.item-vacancy__content ul {
+	margin-bottom: 24px;
+}
+.item-vacancy__content ul li {
+	padding-left: 23px;
+	position: relative;
+}
+.item-vacancy__content ul li::before {
+	position: absolute;
+	top: 0;
+	left: 3px;
+	content: "•";
+}
+.item-vacancy.active {
+	background: #F2FAFF;
+	border-color: #F2FAFF;
+}
+.form-page {
+	padding: 50px 251px;
+	background: #F1F4F7;
+	border-radius: 16px;
+}
+.title-about.title-about_vacancies {
+	max-width: 931px;
+	padding-top: 60px;
+	padding-bottom: 45px;
+	margin: 0 auto;
+	text-align: center;
+}
+.item-form textarea {
+	height: 99px;
+	padding-top: 15px;
+	resize: none;
+}
+.form-page .checkbox {
+	margin-top: 15px;
+	justify-content: center;
+	white-space: nowrap;
+}
+.col_btn {
+	text-align: right;
+}
+.file-upload input {
+	width: 0 !important;
+	height: 0 !important;
+	padding: 0 !important;
+	opacity: 0 !important;
+}
+.file-upload label {
+	font-size: 14px;
+	height: 48px;
+	font-weight: 400;
+	display: flex;
+	letter-spacing: 0.05em;
+	align-items: center;
+	color: #191E27;
+	cursor: pointer;
+	font-family: "Montserrat";
+	transition: all 0.3s;
+}
+.file-upload:hover label {
+	color: #1C56B6;
+}
+.file-upload label i {
+	font-size: 20px;
+	margin-right: 14px;
+}
+.file-upload {
+	position: relative;
+}
+.name-upload {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	margin-top: 2px;
+	font-size: 12px;
+	line-height: 15px;
 }
